RGW - Make sure PostObj set bucket on s->object

s->bucket is guaranteed to exist at this point, since this is a bucket
OP (and we use it earlier in the function).

Fixes: https://tracker.ceph.com/issues/57911

Signed-off-by: Daniel Gryniewicz <dang@redhat.com>
(cherry picked from commit 0ac32cffb257acb04ad98c95abcec3994ddcc249)